[package]
name = "mdrs"
version = "0.1.0"
authors = ["NAiveD <nice-die@live.com>"]
edition = "2021"
description = "Mdance io Render Server. Provide WebRTC wrapper for mdanceio. "
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.4.0"
tokio = { version = "1.20.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.17"
clap = "3.2.12"
bytes = "1.1.0"
dcv-color-primitives = "0.5.1"
vpx-encode = "0.6.1"
chrono = "0.4.19"
anyhow = "1.0.58"
base64 = "0.13.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
# mdanceio = { git = "https://github.com/ReaNAiveD/mdanceio.git" }
mdanceio = { path = "../mdanceio/mdanceio"}
